--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "swiper": "^11.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
