--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "heroicons": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "tailwindcss": "^3.3.5"
   }
 }
